Version Next

    - Fixed use-after-free bug in block_cache_verified() (issue #113)
    - Fixed use-after-free bug when updating IAM credentials (pr #114)
    - Fixed bug in test mode that was causing bogus I/O errors

Version 1.5.2 released July 9, 2019

    - Fixed bug where block cache would not work when run in the background (issue #112)
    - Fixed bug where we were not parsing HTTP headers case-insensitively (pr #11)
    - Bail out during `--listBlocks' if we see an object name past our block range
    - Added `--blockHashPrefix' flag (issue #80)

Version 1.5.1 released April 15, 2019

    - Fixed a few places where fixed-sized buffers were too small (issue #108)
    - Don't claim cache hit if partial write required reading the block (pr #103)
    - Exit process with error code if s3backer store setup fails at startup
    - Reset statistics if stats file is unlinked (issue #106)

Version 1.5.0 released June 9, 2018

    - Add support for recovering dirty blocks in the disk cache (issue #87)
    - Replaced boolean 'mounted' flag with a unique 32-bit mount token (issue #87)
    - Wait for min_write_delay before access after write error (issue #76)
    - Configure TCP keep-alive on HTTP connections (issue #78)
    - Added support for server side encryption (pull #81)

Version 1.4.4 released February 1, 2017

    - Added `--defaultContentEncoding' for non-compliant backends (issue #68)
    - Fixed auth bug when prefix contains URL-encodable char (issue #69)
    - Remove restriction preventing streaming encryption modes (issue #70)

Version 1.4.3 released July 25, 2016

    - Add support for STANDARD_IA storage class (issue #59)
    - Set "Accept-Encoding" header appropriately (issue #48)
    - Fix build issue with OpenSSL 1.1.0 (issue #64)

Version 1.4.2 released September 1, 2015

    - Update license to fix OpenSSL vs. GPL conflict
    - Remove obsolete Debian files
    - Fix typos in help output

Version 1.4.1 released May 4, 2015
